<resources>
    <string name="app_name">HzTools</string>
    <string name="popup">popup</string>
    <string name="slider">轮播</string>
    <string name="picker">picker选择器</string>
    <string name="dialogs">弹窗</string>
    <string name="imagepicker">图片选择器</string>
    <string name="timer">时间选择</string>
    <string name="city">城市三级联动</string>
    <string name="indicator">指示器</string>
    <string name="code">二维码扫描</string>
    <string name="refresh">refresh</string>
    <string name="dragView">QQ5.0拖拽</string>
    <string name="pullZoom">弹性图片</string>
    <string name="dialogplus">工具弹窗</string>
    <string name="menu_action_refresh">刷新</string>
    <string name="menu_action_share">分享</string>
    <string name="menu_action_copy">复制URL</string>
    <string name="menu_action_openwith">其他方式打开</string>
    <string name="copied_to_clipboard">已复制到粘贴板</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">CLOSE</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>
    <string name="Tags">分类标签</string>
    <string name="photoView">图片预览</string>
    <string name="edittext">输入框校验</string>
    <string name="autoText">A TextView that automatically resizes text to fit perfectly within its bounds.</string>
    <string name="autofitText">自动吻合Text</string>
    <string name="wechat">微信通讯录</string>
    <string name="swipeMenu">QQ侧滑菜单</string>
    <string name="danmu">弹幕</string>
    <string name="indexText">缩进标题</string>
    <string name="recycler">recycler</string>
    <string name="okgo">网络请求</string>
    <string name="autolayout">屏幕适配</string>
    <string name="iconfont">字体图标</string>
    <string name="icons">&#xe692;&#xe693;&#xe694;&#xe695;&#xe6b0;&#xe6b1;&#xe6b2;&#xe6b3;&#xe6b5;&#xe6b6;</string>
    <string name="loadding">load View</string>
    <string name="viewpager">view pager</string>
    <string name="numberprogressbar">数字进度条</string>
    <string name="refresh2">弹性</string>
    <string name="jsbridge"><![CDATA[JS <=> Android]]></string>
    <string name="alert">alert弹窗</string>
    <string name="animation">动画</string>
    <string name="AutoLinkText">LinkText</string>
    <string name="ninegrid">九宫格图片</string>
    <string name="tab_order_today">今天</string>
    <string name="tab_order_whole">全部订单</string>
    <string name="tab_order_not_spending">未消费</string>
    <string name="filterview">过滤菜单</string>
    <string name="header_scrolling_behavior">hz.com.hztools.widget.HeaderScrollingBehavior</string>
    <string name="header_float_behavior">hz.com.hztools.widget.HeaderFloatBehavior</string>
    <string name="scroll">Scroll</string>
    <string name="video">小视频录制</string>
    <string name="nodeProgress">节点进度</string>
    <string name="deviceIndo">设备信息</string>
    <string name="login">登录</string>
    <string name="addpic">添加图片</string>
    <string name="getResource">获取本地资源</string>
    <string name="RickText">RickText</string>
    <string name="comparison">原始文本：</string>
    <string name="effect">实际效果：</string>
    <string name="update_list">update list</string>
    <string name="poem_0">千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被、雨打风吹去。斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。元嘉草草，封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。可堪回首，佛狸祠下，一片神鸦社鼓。凭谁问：廉颇老矣，尚能饭否？</string>
    <string name="ExpandableTextView">展开更多TextView</string>
    <string-array name="poems">
        <item>1.醉里挑灯看剑，梦回吹角连营。八百里分麾下炙，五十弦翻塞外声。沙场秋点兵。马作的卢飞快，弓如霹雳弦惊。了却君王天下事，赢得生前身后名。可怜白发生。</item>
        <item>2.庭院深深深几许，云窗雾阁春迟。为谁憔悴损芳姿。夜来清梦好，应是发南枝。玉瘦檀轻无限恨，南楼羌管休吹。浓香吹尽有谁知。暖风迟日也，别到杏花肥。</item>
        <item>3.淮左名都，竹西佳处，解鞍少驻初程。过春风十里。尽荠麦青青。自胡马窥江去后，废池乔木，犹厌言兵。渐黄昏，清角吹寒。都在空城。杜郎俊赏，算而今、重到须惊。纵豆蔻词工，青楼梦好，难赋深情。二十四桥仍在，波心荡、冷月无声。念桥边红药，年年知为谁生。</item>
        <item>4.春花秋月何时了？往事知多少。小楼昨夜又东风，故国不堪回首月明中。雕栏玉砌应犹在，只是朱颜改。问君能有几多愁？恰似一江春水向东流。</item>
        <item>5.无言独上西楼，月如钩。寂寞梧桐深院锁清秋。剪不断，理还乱，是离愁。别是一般滋味在心头。</item>
        <item>6.红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。一怀愁绪，几年离索。错、错、错。春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。山盟虽在，锦书难托。莫、莫、莫！</item>
        <item>7.怒发冲冠，凭栏处、潇潇雨歇。抬望眼，仰天长啸，壮怀激烈。三十功名尘与土，八千里路云和月。莫等闲、白了少年头，空悲切！靖康耻，犹未雪。臣子恨，何时灭！驾长车，踏破贺兰山缺。壮志饥餐胡虏肉，笑谈渴饮匈奴血。待从头、收拾旧山河，朝天阙。</item>
        <item>8.If I were to fall in love,It would have to be with youYour eyes, your smile,The way you laugh,The things you say and do Take me to the places,My heart never knew So, if I were to fall in love,It would have to be with you.</item>
        <item>9.Forgive me for needing you in my life; Forgive me for enjoying the beauty of your body and soul; Forgive me for wanting to be with you when I grow old</item>
        <item>10.My river runs to thee. Blue sea, wilt thou welcome me? My river awaits reply.Oh! sea, look graciously.</item>
        <item>11.You make me feel so happy;Whenever I\'m with you.You make me feel so special--This love is too good to be true.</item>
        <item>12.If you were a teardrop,In my eye,For fear of losing you,I would never cry.And if the golden sun,Should cease to shine its light,Just one smile from you,Would make my whole world bright.</item>
        <item>13.Since the first time I saw you,I felt something inside,I don\'t know if it\'s love at first sight,I do know I really like you a lot.</item>
        <item>14.Thoughts of you dance through my mind. Knowing, it is just a matter of time.Wondering... will u ever be mine?You are in my dreams, night... and sometimes... day.The thoughts seem to never fade away.</item>
        <item>15.Her gesture, motion, and her smiles, Her wit, her voice my heart beguiles,Beguiles my heart, I know not why,And yet, I\'ll love her till I die.</item>
    </string-array>
    <string-array name="poems_2">
        <item>1.醉里挑灯看剑，梦回吹角连营。八百里分麾下炙，五十弦翻塞外声。沙场秋点兵。马作的卢飞快，弓如霹雳弦惊。了却君王天下事，赢得生前身后名。可怜白发生。</item>
        <item>2.庭院深深深几许，云窗雾阁春迟。为谁憔悴损芳姿。夜来清梦好，应是发南枝。玉瘦檀轻无限恨，南楼羌管休吹。浓香吹尽有谁知。暖风迟日也，别到杏花肥。</item>
        <item>3.淮左名都，竹西佳处，解鞍少驻初程。过春风十里。尽荠麦青青。自胡马窥江去后，废池乔木，犹厌言兵。渐黄昏，清角吹寒。都在空城。杜郎俊赏，算而今、重到须惊。纵豆蔻词工，青楼梦好，难赋深情。二十四桥仍在，波心荡、冷月无声。念桥边红药，年年知为谁生。</item>
        <item>4.春花秋月何时了？往事知多少。小楼昨夜又东风，故国不堪回首月明中。雕栏玉砌应犹在，只是朱颜改。问君能有几多愁？恰似一江春水向东流。</item>
        <item>5.无言独上西楼，月如钩。寂寞梧桐深院锁清秋。剪不断，理还乱，是离愁。别是一般滋味在心头。</item>
        <item>6.红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。一怀愁绪，几年离索。错、错、错。春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。山盟虽在，锦书难托。莫、莫、莫！</item>
        <item>7.怒发冲冠，凭栏处、潇潇雨歇。抬望眼，仰天长啸，壮怀激烈。三十功名尘与土，八千里路云和月。莫等闲、白了少年头，空悲切！靖康耻，犹未雪。臣子恨，何时灭！驾长车，踏破贺兰山缺。壮志饥餐胡虏肉，笑谈渴饮匈奴血。待从头、收拾旧山河，朝天阙。</item>
        <item>8.并刀如水，吴盐胜雪，纤手破新橙。锦幄初温，兽烟不断，相对坐调笙。低声问向谁行宿，城上已三更。马滑霜浓，不如休去，直是少人行。</item>
        <item>9.登临送目，正故国晚秋，天气初肃。千里澄江似练，翠峰如簇。归帆去棹残阳里，背西风，酒旗斜矗。彩舟云淡，星河鹭起，画图难足。念往昔，繁华竞逐，叹门外楼头，悲恨相续。千古凭高对此，谩嗟荣辱。六朝旧事随流水，但寒烟衰草凝绿。至今商女，时时犹唱，后庭遗曲。</item>
        <item>10.莫听穿林打叶声，何妨吟啸且徐行。竹杖芒鞋轻胜马。谁怕！一蓑烟雨任平生。料峭春风吹酒醒，微冷，山头斜照却相迎。回首向来萧瑟处。归去，也无风雨也无晴。</item>
        <item>11.东风夜放花千树，更吹落星如雨。宝马雕车香满路，凤箫声动，玉壶光转，一夜鱼龙舞。蛾儿雪柳黄金缕，笑语盈盈暗香去。众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。</item>
        <item>12.楚天千里清秋，水随天去秋无际。遥岑远目，献愁供恨，玉簪螺髻。落日楼头，断鸿声里，江南游子，把吴钩看了，阑干拍遍，无人会、登临意。休说鲈鱼堪脍，尽西风季鹰归未？求田问舍，怕应羞见，刘郎才气。可惜流年，忧愁风雨，树犹如此。倩何人唤取，红巾翠袖，揾英雄泪？</item>
        <item>13.塞下秋来风景异。衡阳雁去无留意。四面边声连角起。千嶂里。长烟落日孤城闭。浊酒一杯家万里。燕然未勒归无计。羌管悠悠霜满地。人不寐。将军白发征夫泪。</item>
        <item>14.画屏天畔，梦回依约，十洲云水。手捻红笺寄人书，写无限、伤春事。别浦高楼曾漫倚，对江南千里。楼下分流水声中，有当日、凭高泪。</item>
        <item>15.态浓意远。眉颦笑浅。薄罗衣窄絮风软。鬓云欺翠卷。南园花树春光暖。红香径里榆钱满。欲上秋千又惊懒。且归休怕晚。</item>
        <item>16.醉里挑灯看剑，梦回吹角连营。八百里分麾下炙，五十弦翻塞外声。沙场秋点兵。马作的卢飞快，弓如霹雳弦惊。了却君王天下事，赢得生前身后名。可怜白发生。</item>
        <item>17.庭院深深深几许，云窗雾阁春迟。为谁憔悴损芳姿。夜来清梦好，应是发南枝。玉瘦檀轻无限恨，南楼羌管休吹。浓香吹尽有谁知。暖风迟日也，别到杏花肥。</item>
        <item>18.淮左名都，竹西佳处，解鞍少驻初程。过春风十里。尽荠麦青青。自胡马窥江去后，废池乔木，犹厌言兵。渐黄昏，清角吹寒。都在空城。杜郎俊赏，算而今、重到须惊。纵豆蔻词工，青楼梦好，难赋深情。二十四桥仍在，波心荡、冷月无声。念桥边红药，年年知为谁生。</item>
        <item>19.春花秋月何时了？往事知多少。小楼昨夜又东风，故国不堪回首月明中。雕栏玉砌应犹在，只是朱颜改。问君能有几多愁？恰似一江春水向东流。</item>
        <item>20.无言独上西楼，月如钩。寂寞梧桐深院锁清秋。剪不断，理还乱，是离愁。别是一般滋味在心头。</item>
        <item>21.红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。一怀愁绪，几年离索。错、错、错。春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。山盟虽在，锦书难托。莫、莫、莫！</item>
        <item>22.怒发冲冠，凭栏处、潇潇雨歇。抬望眼，仰天长啸，壮怀激烈。三十功名尘与土，八千里路云和月。莫等闲、白了少年头，空悲切！靖康耻，犹未雪。臣子恨，何时灭！驾长车，踏破贺兰山缺。壮志饥餐胡虏肉，笑谈渴饮匈奴血。待从头、收拾旧山河，朝天阙。</item>
        <item>23.并刀如水，吴盐胜雪，纤手破新橙。锦幄初温，兽烟不断，相对坐调笙。低声问向谁行宿，城上已三更。马滑霜浓，不如休去，直是少人行。</item>
        <item>24.登临送目，正故国晚秋，天气初肃。千里澄江似练，翠峰如簇。归帆去棹残阳里，背西风，酒旗斜矗。彩舟云淡，星河鹭起，画图难足。念往昔，繁华竞逐，叹门外楼头，悲恨相续。千古凭高对此，谩嗟荣辱。六朝旧事随流水，但寒烟衰草凝绿。至今商女，时时犹唱，后庭遗曲。</item>
        <item>25.莫听穿林打叶声，何妨吟啸且徐行。竹杖芒鞋轻胜马。谁怕！一蓑烟雨任平生。料峭春风吹酒醒，微冷，山头斜照却相迎。回首向来萧瑟处。归去，也无风雨也无晴。</item>
        <item>26.东风夜放花千树，更吹落星如雨。宝马雕车香满路，凤箫声动，玉壶光转，一夜鱼龙舞。蛾儿雪柳黄金缕，笑语盈盈暗香去。众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。</item>
        <item>27.楚天千里清秋，水随天去秋无际。遥岑远目，献愁供恨，玉簪螺髻。落日楼头，断鸿声里，江南游子，把吴钩看了，阑干拍遍，无人会、登临意。休说鲈鱼堪脍，尽西风季鹰归未？求田问舍，怕应羞见，刘郎才气。可惜流年，忧愁风雨，树犹如此。倩何人唤取，红巾翠袖，揾英雄泪？</item>
        <item>28.塞下秋来风景异。衡阳雁去无留意。四面边声连角起。千嶂里。长烟落日孤城闭。浊酒一杯家万里。燕然未勒归无计。羌管悠悠霜满地。人不寐。将军白发征夫泪。</item>
        <item>29.画屏天畔，梦回依约，十洲云水。手捻红笺寄人书，写无限、伤春事。别浦高楼曾漫倚，对江南千里。楼下分流水声中，有当日、凭高泪。</item>
        <item>30.态浓意远。眉颦笑浅。薄罗衣窄絮风软。鬓云欺翠卷。南园花树春光暖。红香径里榆钱满。欲上秋千又惊懒。且归休怕晚。</item>
    </string-array>
    <string name="simple_string_list">Simple String List</string>
    <string name="custom_adapter_list">Custom Adapter List</string>
    <string name="custom_adapter_list_with_dividers">Custom Adapter List with dividers</string>
    <string name="android">android</string>
    <string name="ios">ios</string>
</resources>