<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:background="@color/colorPrimary"
        android:text="iconfont字体图标"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:text="@string/android" />

    <TextView
        android:id="@+id/ios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:text="@string/ios" />

    <TextView
        android:id="@+id/tv_iconfont"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/icons"/>

    <SeekBar
        android:id="@+id/sb_SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:maxHeight="2.0dp"
        android:minHeight="2.0dp" />

</LinearLayout>